resovle alignment issue on word and quiz page (on tablette/phone size screen)

--- a/client/src/quiz/components/QuizAnswers.css
+++ b/client/src/quiz/components/QuizAnswers.css
@@ -25,6 +25,6 @@
 @media (max-width: 900px) {
   .quiz-answers-container { 
     width: 100%;
-    margin: 32px 12px;
+    margin: 32px auto;
   }
 }
