--- a/client/src/word/pages/Word.css
+++ b/client/src/word/pages/Word.css
@@ -16,6 +16,7 @@
 
 @media (max-width: 900px) {
   .word-main {
+    margin: auto;
     width: 100%;
   }
 }
